--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-1
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Todo List App</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <div class="main">
+        <h2>Todo List using JavaScript</h2>
+
+        <div class="input-box">
+            <input type="text" id="taskInput" placeholder="Enter your task...">
+            <button id="addBtn">Add</button>
+        </div>
+
+        <ul class="output"></ul>
+    </div>
+
+    <script src="main.js"></script>
+</body>
+</html>
+
